@@ -16,64 +16,81 @@
 
 package com.ning.billing.catalog.io;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.net.URLConnection;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Scanner;
-
-import javax.xml.bind.JAXBException;
-import javax.xml.transform.TransformerException;
-
-import org.xml.sax.SAXException;
-
-import com.ning.billing.catalog.Catalog;
+import com.google.inject.Inject;
+import com.ning.billing.catalog.StandaloneCatalog;
 import com.ning.billing.catalog.VersionedCatalog;
-import com.ning.billing.catalog.api.InvalidConfigException;
+import com.ning.billing.lifecycle.KillbillService.ServiceException;
+import com.ning.billing.util.clock.Clock;
+import com.ning.billing.util.config.UriAccessor;
 import com.ning.billing.util.config.XMLLoader;
 
-public class VersionedCatalogLoader  {
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.List;
+
+public class VersionedCatalogLoader implements ICatalogLoader  {
+	private static final Object PROTOCOL_FOR_FILE = "file";
 	private  final String XML_EXTENSION = ".xml";
 	private  final String HREF_LOW_START = "href=\""; 
 	private  final String HREF_CAPS_START = "HREF=\""; 
 	private  final String HREF_SEARCH_END = "\"";
+	private Clock clock;
 			
-	/* (non-Javadoc)
-	 * @see com.ning.billing.catalog.io.ICatalogLoader#load(java.net.URL)
-	 */
-	public  VersionedCatalog load(URL url) throws IOException, SAXException, InvalidConfigException, JAXBException, TransformerException, URISyntaxException {
-		String directoryContents = pullContentsFrom(url);
-		List<URL> xmlURLs = findXmlReferences(directoryContents, url);
-		VersionedCatalog result = new VersionedCatalog();
-		for(URL u : xmlURLs) {
-			Catalog catalog = XMLLoader.getObjectFromURL(u, Catalog.class);
-			result.add(catalog);
-		}
-		return result;
+	@Inject 
+	public VersionedCatalogLoader(Clock clock) {
+		this.clock = clock;
 	}
 	
-	protected  List<URL> findXmlReferences(String directoryContents, URL url) throws MalformedURLException {
-		if(url.getProtocol().equals("file")) {
+	/* (non-Javadoc)
+	 * @see com.ning.billing.catalog.io.ICatalogLoader#load(java.lang.String)
+	 */
+	@Override
+	public  VersionedCatalog load(String uriString) throws ServiceException{
+		try {
+			List<URI> xmlURIs = null;
+			
+			if(uriString.endsWith(XML_EXTENSION)) { //assume its an xml file
+				xmlURIs = new ArrayList<URI>();
+	        	xmlURIs.add(new URI(uriString));
+			} else { //assume its a directory
+				String directoryContents = UriAccessor.accessUriAsString(uriString);
+				xmlURIs = findXmlReferences(directoryContents, new URL(uriString));
+			}
+			
+			VersionedCatalog result = new VersionedCatalog();
+			for(URI u : xmlURIs) {
+				StandaloneCatalog catalog = XMLLoader.getObjectFromUri(u, StandaloneCatalog.class);
+				result.add(catalog);
+			}
+			Date now = clock.getUTCNow().toDate();
+			result.configureEffectiveDate(now);
+			return result;
+		} catch (Exception e) {
+			throw new ServiceException("Problem encountered loading catalog", e);
+		}
+	}
+	
+	protected  List<URI> findXmlReferences(String directoryContents, URL url) throws URISyntaxException {
+		if(url.getProtocol().equals(PROTOCOL_FOR_FILE)) {
 			return findXmlFileReferences(directoryContents, url);
 		} 
 		return findXmlUrlReferences(directoryContents, url);
 	}
 
-	protected  List<URL> findXmlUrlReferences(String directoryContents, URL url) throws MalformedURLException {
-		List<URL> results = new ArrayList<URL>();
+	protected  List<URI> findXmlUrlReferences(String directoryContents, URL url) throws URISyntaxException {
+		List<URI> results = new ArrayList<URI>();
 		List<String> urlFragments = extractHrefs(directoryContents);
 		for(String u : urlFragments) {
 			if(u.endsWith(XML_EXTENSION)) { //points to xml
 				if(u.startsWith("/")) { //absolute path need to add the protocol
-					results.add(new URL(url.getProtocol() + ":" + u));
+					results.add(new URI(url.getProtocol() + ":" + u));
 				} else if (u.startsWith("http:")) { // full url
-					results.add(new URL(u));
+					results.add(new URI(u));
 				} else { // relative url stick the name on the end
-					results.add(appendToURL(url,u));
+					results.add(appendToURI(url,u));
 				}
 			}
 		}
@@ -108,28 +125,24 @@ public class VersionedCatalogLoader  {
 		return results;
 	}
 
-	protected  List<URL> findXmlFileReferences(String directoryContents, URL url) throws MalformedURLException {
-		List<URL> results = new ArrayList<URL>();
+	protected  List<URI> findXmlFileReferences(String directoryContents, URL url) throws URISyntaxException {
+		List<URI> results = new ArrayList<URI>();
 		String[] filenames = directoryContents.split("\\n");
 		for(String filename : filenames) {
 			if(filename.endsWith(XML_EXTENSION)) {
-				results.add(appendToURL(url,filename));
+				results.add(appendToURI(url,filename));
 			}
 		}
 		return results;
 	}
 
-	protected  URL appendToURL(final URL url, final String filename) throws MalformedURLException {
+	protected  URI appendToURI(final URL url, final String filename) throws URISyntaxException {
 		String f = filename;
 		if (!url.toString().endsWith("/")) {
 			f = "/" + filename;
 		}
-		return new URL(url.toString() + f);
+		return new URI(url.toString() + f);
 	}
 
-	protected  String pullContentsFrom(final URL url) throws IOException {
-		URLConnection connection = url.openConnection();
-		InputStream content = connection.getInputStream();
-		return new Scanner(content).useDelimiter("\\A").next();
-	}
+	
 }
